# odopy

./: .gitignore  README.md  environment.yaml  notes.txt  setup.cfg  setup.py  setup_odo_env.sh
src/odopy/: headCalibrate.py
src/odopy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/odopy/test/: orientation_values_walk.npy  test_odo.py
src/odopy/test/test_data/: eye0_timestamps.npy  eye1_timestamps.npy  odometry_timestamps.npy  t265.pldata  t265_left.extrinsics  user_info.csv  user_info_orig.csv  world.extrinsics  world.intrinsics
src/vedb_odometry/: vedb_calibration.py
src/vedb_odometry.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/vedb_odometry/test/: __init__.py  test_folder_cloud.py  test_odo.py
src/vedb_odometry/test/test_data/: accel_timestamps.npy  config.yaml  gyro_timestamps.npy  info.player.json  odo_times.yaml  t265_right.extrinsics  t265_timestamps.npy  world.pldata  world_timestamps.npy
test/: test_folder_cloud.py
vedb_odometry/: __init__.py  vedb_calibration.py
