[metadata]
name = odopy
version = 0.1.0
author = Brian Szekely Christian Sinnott
author_email = bszekely@nevada.unr.edu
description = package for handling T265 data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bszek213/odopy
project_urls =
    Bug Tracker = https://github.com/bszek213/odopy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >3.7

[options.packages.find]
where = src
